Modify lichess css to fix moves not showing at the bottom

--- a/src/tiddlychess/files/lichess-pgn-viewer.css
+++ b/src/tiddlychess/files/lichess-pgn-viewer.css
@@ -329,7 +329,7 @@ cg-board square.current-premove {
 }
 .lpv--moves-bottom {
   grid-template-areas: "board" "controls" "side";
-  grid-template-rows: auto var(--controls-height);
+  grid-template-rows: auto var(--controls-height) 14em;
 }
 .lpv--moves-bottom .lpv__controls {
   border-bottom: 1px solid var(--c-lpv-border, hsl(0, 0%, 25%));
@@ -343,7 +343,7 @@ cg-board square.current-premove {
   .lpv--moves-auto {
     grid-template-areas: "board" "controls" "side";
     grid-template-columns: minmax(200px, calc(100vh - var(--controls-height) - 6em));
-    grid-template-rows: auto var(--controls-height);
+    grid-template-rows: auto var(--controls-height) 14em;
   }
 }
 .lpv--players.lpv--moves-false {
@@ -356,7 +356,7 @@ cg-board square.current-premove {
 }
 .lpv--players.lpv--moves-bottom {
   grid-template-areas: "player-top" "board" "player-bot" "controls" "side";
-  grid-template-rows: 2em auto 2em var(--controls-height);
+  grid-template-rows: 2em auto 2em var(--controls-height) 14em;
 }
 .lpv--players.lpv--moves-bottom .lpv__controls {
   border-bottom: 1px solid var(--c-lpv-border, hsl(0, 0%, 25%));
@@ -370,7 +370,7 @@ cg-board square.current-premove {
   .lpv--players.lpv--moves-auto {
     grid-template-areas: "player-top" "board" "player-bot" "controls" "side";
     grid-template-columns: minmax(200px, calc(100vh - 2 * 2em - var(--controls-height) - 6em));
-    grid-template-rows: 2em auto 2em var(--controls-height);
+    grid-template-rows: 2em auto 2em var(--controls-height) 14em;
   }
 }
 .lpv__board {
